# Schlappi-vcv

./: .gitignore  .gitmodules  Makefile  README.md  plugin.json
.github/workflows/: build-plugin.yml
metamodule/: CMakeLists.txt  plugin-mm.json
metamodule/assets/widgets/: info.txt
src/: BitCalculator.h  Resamplers.h  btfld.cpp  btmx.cpp  nibbler.cpp  plugin.cpp  plugin.hpp
src/widgets/: schlappi_widgets.hpp
